@@ -1,6 +1,7 @@
 2022-06-28 Maarten Brock <sourceforge.brock AT dse.nl>
 
-	* debugger/mcs51/cmd.c: applied patch #439, Thanks Mark Symonds,
+	* debugger/mcs51/cmd.c: applied patch #439,
+	    also applied patch from bug #3485, Thanks Mark Symonds,
 	    also cleaned up many whitespace irregularities
 
 2022-09-17 Felix Salfelder <felix AT salfelder.org>
